--- a/index.html
+++ b/index.html
@@ -165,6 +165,6 @@ When saving, folder path is constructed as: {cfgPath}/{filename}.json (no nested
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/assets/js/main.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
