--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Q-Tee</title>
+<title>Question Tracker — GitHub Pages</title>
+<link href="assets/css/style.css" rel="stylesheet"> 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-white shadow-sm mb-3">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Q-Tee</a>
+    <a class="navbar-brand" href="#">Question Tracker</a>
     <div class="d-flex gap-2">
       <button id="openSettings" class="btn btn-outline-secondary btn-sm">Settings</button>
       <button id="importBtn" class="btn btn-outline-success btn-sm">Import</button>
@@ -80,7 +80,7 @@
                 <tr>
                   <th style="width:64px">Q#</th>
                   <th>Notes</th>
-                  <th colspan="3" class="text-center">Last 3 Attempts (old → recent)</th>
+                  <th class="text-center">Attempts (old → recent)</th>
                 </tr>
               </thead>
               <tbody></tbody>
